--- a/build.gradle
+++ b/build.gradle
@@ -51,14 +51,13 @@ subprojects {
   apply plugin: 'org.checkerframework'
   
   checkerFramework {
-    checkers = ['org.checkerframework.checker.index.IndexChecker']
+    checkers = ['org.checkerframework.checker.resourceleak.ResourceLeakChecker']
   }
 
   dependencies {
     errorproneJavac libs.errorproneJavac
     errorprone libs.errorproneCore
     checkerFramework 'org.checkerframework:checker:3.25.0'
-    implementation 'org.checkerframework:checker-qual:3.25.0'
   }
 
   tasks.withType(JavaCompile).configureEach { task ->
