--- a/retrofit/build.gradle
+++ b/retrofit/build.gradle
@@ -11,6 +11,7 @@ dependencies {
 
   compileOnly libs.animalSnifferAnnotations
   compileOnly libs.findBugsAnnotations
+  compileOnly 'org.checkerframework:checker-qual:3.25.0'
 
   testImplementation projects.retrofit.testHelpers
   testImplementation libs.junit
